# stabileo

./: .dockerignore  .gitignore  AI_ROADMAP.md  BENCHMARKS.md  CHANGELOG.md  CURRENT_STATUS.md  Cargo.toml  DOCS.md  Dockerfile  INFRASTRUCTURE_ROADMAP.md  Makefile  POSITIONING.md  PRODUCT_ROADMAP.md  README.md  ROADMAP.md  SOLVER_ROADMAP.md  VERIFICATION.md  dedaliano-perf-plan.md  docker-compose.yml  flake.nix  nginx.conf  wrangler.toml
.config/: nextest.toml
automation/: com.dedaliano.docsync.plist
backend/: .env.example  Cargo.toml
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/capabilities/: actions.rs  build_model.rs  coordinate_system.rs  edit_executor.rs  explain_diagnostic.rs  generators.rs  interpret_results.rs  mod.rs  registry.rs  review_model.rs  sections.rs  validate_snapshot.rs
backend/src/middleware/: auth.rs
backend/src/providers/: claude.rs  gemini.rs  mod.rs  openai_compat.rs  traits.rs
backend/src/routes/: build_model.rs  capabilities.rs  explain_diagnostic.rs  interpret_results.rs  mod.rs  review_model.rs
backend/tests/: build_model_tests.rs  explain_diagnostic_tests.rs  interpret_results_tests.rs  review_model_tests.rs
docs/: AI_MODELING_WORKFLOW.md  BENCHMARKS.md  CODEX_WORKFLOW_STABILEO.md  CURRENT_STATE_STABILEO.md  POSITIONING.md  PR_RESTRUCTURE_PLAN.md  QUICKSTART.md  README.md  SOLVER_REFERENCE.md  VERIFICATION.md
engine/: Cargo.toml  README.md  SHELL_FAMILY_FEASIBILITY.md
research/: README.md  ai_structural_engineering_roadmap.md  automation_gaps.md  beyond_roadmap_opportunities.md  cypecad_gap_analysis.md  (+12 more)
(+1951 files in other folders)
